<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenFeed</string>

    <!-- Welcome -->
    <string name="title_activity_welcome">Welcome</string>
    <string name="sign_in_with_twitter">Sign in</string>
    <string name="welcome_title">Welcome to OpenFeed</string>
    <string name="welcome_title_secondary">Please sign in to continue</string>

    <!-- Home -->
    <string name="title_activity_home">Home</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_go_to_top">Go to Top</string>
    <string name="loading">Loading…</string>
    <string name="status_user_name_placeholder">William Mora</string>
    <string name="status_user_screenname_placeholder">\@_williammora</string>
    <string name="status_retweeted_by_prefix">Retweeted by %s</string>
    <string name="status_retweeted_by_placeholder">Retweeted by William Mora</string>
    <string name="status_created_placeholder">24 mins ago</string>
    <string name="status_text_placeholder">This is a test tweet, I\'m adding @other_users and adding a bunch of other text. Lorem ipsum blablabla, it\'s time to use Samuel L. Ipsum yeh</string>
    <string name="replies_quantity_placeholder">24</string>
    <string name="retweets_quantity_placeholder">24</string>
    <string name="favorites_quantity_placeholder">24</string>

    <!-- Status -->
    <string name="title_activity_status"></string>

    <!-- User -->
    <string name="title_activity_user"></string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <!-- SearchResults -->

    <!-- Compose Status -->
    <string name="title_activity_compose_status">New</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="compose_characters_singular">character</string>
    <string name="compose_characters_plural">characters</string>
    <string name="compose_characters_left">%1$d %2$s left</string>
    <string name="compose_send_button">Send</string>

</resources>
