<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.williammora.openfeed.fragments.ComposeStatusFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/compose_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/compose_hint"
                android:textColor="@color/openfeed_text_color" />

            <TextView
                android:id="@+id/characters_left_indicator"
                style="@style/OpenFeedTheme.SmallText.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/compose_characters_left" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="2dp">

                <TextView
                    style="@style/OpenFeedTheme.RaisedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/compose_send_button" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</FrameLayout>
