<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/status_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/status_user_pic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/status_retweeted_by_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/status_user_pic"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/retweet_secondary_color_small" />

        <TextView
            android:id="@+id/status_retweeted_by"
            style="@style/OpenFeedTheme.SmallerText.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:text="@string/status_retweeted_by_placeholder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/status_user_pic"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/status_user_name_placeholder"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status_user_screenname"
                style="@style/OpenFeedTheme.SmallText.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:text="@string/status_user_screenname_placeholder" />

            <TextView
                android:id="@+id/status_created"
                style="@style/OpenFeedTheme.SmallText.Tertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_created_placeholder" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>