<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/status_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/status_user_pic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:id="@+id/status_retweeted_by_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/status_user_pic"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/retweet_secondary_color_small" />

                    <TextView
                        android:id="@+id/status_retweeted_by"
                        style="@style/OpenFeedTheme.SmallerText.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:text="@string/status_retweeted_by_placeholder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/status_user_pic"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/status_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_user_name_placeholder"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/status_user_screenname"
                            style="@style/OpenFeedTheme.SmallText.Secondary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/status_user_screenname_placeholder" />

                        <TextView
                            android:id="@+id/status_created"
                            style="@style/OpenFeedTheme.SmallText.Tertiary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_created_placeholder" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/solid_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status_text"
                    style="@style/OpenFeedTheme.Status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_text_placeholder" />

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>